--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -80,6 +80,7 @@ action.compare-data-types=Compare Data Types
 action.comparerDB-command.description=Compares objects from two databases
 action.comparerDB-command=Comparer DB
 action.connect-command=New Connection
+action.connect-to-database-command=Connect
 action.console-command=System Console Window
 action.copy-command=Copy
 action.create-database-command.description=Create Database
@@ -169,6 +170,7 @@ action.page-setup-command=Page Setup
 action.paste-command=Paste
 action.preferences-command=Preferences
 action.print-command=Print
+action.print-plan-command=Print Plan
 action.print-preview-command=Print Preview
 action.redo-command.description=Redo the last action
 action.redo-command=Redo
@@ -288,6 +290,183 @@ menu.view.tool-bars.search-tool-bar=Search Tool Bar
 menu.view.tool-bars=Tool Bars
 menu.view=View
 menu.window=Window
+# -----------------------------------------------------
+# Preferences
+# -----------------------------------------------------
+preferences.AlternatingRowBackground=Alternating row background
+preferences.Appearance=Appearance
+preferences.Auto-completeDatabaseObjectsOn=Auto-complete database objects on
+preferences.Auto-completeKeywordsOn=Auto-complete keywords on
+preferences.BinaryValueCellBackground=Binary value cell background
+preferences.BooleanValueCellBackground=Boolean value cell background
+preferences.Braces=Braces
+preferences.BracesError=Braces Error
+preferences.BracesMatch=Braces Match
+preferences.CaretColour=Caret colour
+preferences.CellDouble-clickOpensDataItemViewer=Cell double-click opens data item viewer
+preferences.ChangedValueCellBackground=Changed value cell background
+preferences.CharacterValueCellBackground=Character value cell background
+preferences.CheckForUpdateOnStartup=Check for update on startup
+preferences.CheckMajorVersions=Check major versions
+preferences.Colour=Colour
+preferences.Colours=Colours
+preferences.ColumnHeight=Column Height
+preferences.ColumnReordering=Column reordering
+preferences.ColumnWidth=ColumnWidth
+preferences.ColumnsResizeable=Columns resizeable
+preferences.Command=Command
+preferences.ConnectAtStartup=Connect at startup
+preferences.ConnectOnDouble-click=Connect on double-click
+preferences.Connection=Connection
+preferences.Connections=Connections
+preferences.ConvertTabsToSpaces=Convert tabs to spaces
+preferences.CreateDesktopLinkWithRestart=Create desktop link with restart
+preferences.CurrentLineHighlight=Current Line Highlight
+preferences.DatabaseBrowser=Database Browser
+preferences.DatabaseTableDataViewTab=Database table data view tab
+preferences.DatabaseToolBar=Database Tool Bar
+preferences.DatabaseTools=Database Tools
+preferences.DatePatternFormat=Date Pattern Format
+preferences.DateTimeValueCellBackground=Date/time value cell background
+preferences.DecorateDialogs=Decorate dialogs
+preferences.DecorateFrame=Decorate frame
+preferences.DefaultCellBackground=Default cell background
+preferences.DefaultEditorAuto-commit=Default editor auto-commit
+preferences.DefaultFileEncoding=Default file encoding
+preferences.DefaultMaximumRowsReturned=Default maximum rows returned
+preferences.DeletedValueCellBackground=Deleted value cell background
+preferences.DesktopBackground=Desktop background
+preferences.Display=Display
+preferences.DisplaySplashScreenAtStartup=Display Splash Screen at Startup
+preferences.Drivers=Drivers
+preferences.EditToolBar=Edit Tool Bar
+preferences.EditTools=Edit Tools
+preferences.Editor=Editor
+preferences.EditorAlternativeBackground=Editor alternative background
+preferences.EditorBackground=EditorBackground
+preferences.EditorForeground=Editor Foreground
+preferences.EditorSample=EditorSample
+preferences.FetchSize=Fetch size
+preferences.FileToolBar=File Tool Bar
+preferences.FileTools=File Tools
+preferences.FocusRowBackground=FocusRowBackground
+preferences.FontName=Font Name
+preferences.FontSize=Font Size
+preferences.FontStyle=Font Style
+preferences.Fonts=Fonts
+preferences.General=General
+preferences.GutterBackground=Gutter background
+preferences.GutterForeground=Gutter Foreground
+preferences.HistoryCount=History count
+preferences.ImportExportToolBar=Import Export Tool Bar
+preferences.ImportExportTools=Import/Export Tools
+preferences.InternetProxySettings=Internet Proxy Settings
+preferences.KeyboardShortcuts=Keyboard Shortcuts
+preferences.Keywords=Keywords
+preferences.LanguageLocales=LanguageLocales
+preferences.LineNumbers=Line numbers
+preferences.LineSeparator=Line separator
+preferences.Literal=Literal
+preferences.LoadUnstableVersions=Load unstable versions
+preferences.Locale=Locale
+preferences.LogErrToConsole=Log System.err to console
+preferences.LogOutToConsole=Log System.out to console
+preferences.LogOutputToFile=Log output to file
+preferences.LookAndFeel=Look and feel
+preferences.LookFeelPlugins=Look & Feel Plugins
+preferences.MaxCLOBCharacterLengthShown=Max CLOB character length shown
+preferences.MaximiseWindowOnStartup=Maximise window on startup
+preferences.MaximumRecordsReturned=Maximum records returned
+preferences.MaximumRollingLogBackups=Maximum rolling log backups
+preferences.Multi-lineComment=Multi-line Comment
+preferences.NewValueCellBackground=New value cell background
+preferences.NodeHeight=Node height
+preferences.NormalText=Normal Text
+preferences.NullValueCellBackground=Null value cell background
+preferences.NullValueCellBackgroundWhenThereIsAdding=Null value cell background when there is adding
+preferences.NullValueCellBackgroundWhenThereIsDeleting=Null value cell background when there is deleting
+preferences.NullValueCellText=Null value cell text
+preferences.Number=Number
+preferences.NumericValueCellBackground=Numeric value cell background
+preferences.ObjectsDB=Objects DB
+preferences.OpenANewEditorForNewOpenConnection=Open a new editor for new open connection
+preferences.Operator=Operator
+preferences.OtherValueCellBackground=Other value cell background
+preferences.OutputLogFilePath=Output log file path
+preferences.OutputLogLevel=Output log level
+preferences.Preferences=Preferences
+preferences.PrintAllSQLToOutputPanel=Print all SQL to output panel
+preferences.PromptToSaveOpenDocuments=Prompt to save open documents
+preferences.ProxyHost=Proxy Host
+preferences.ProxyPassword=Proxy Password
+preferences.ProxyPort=Proxy Port
+preferences.ProxyUser=Proxy User
+preferences.QueryEditorColours=Query Editor Colours
+preferences.QuoteString=Quote String
+preferences.RecentFilesToStore=Recent files to store
+preferences.RecycleResultSetTabs=Recycle result set tabs
+preferences.RemoveCommentsForExecution=Remove comments for execution
+preferences.ResultSetTable=Result Set Table
+preferences.ResultsPanel=ResultsPanel
+preferences.ResultsPanelBackground=Results panel background
+preferences.RetainResultSetMetaData=Retain result set meta data
+preferences.Right-alignNumericValues=Right-align numeric values
+preferences.RightMargin=Right Margin
+preferences.RightMarginColour=Right margin colour
+preferences.RightMarginColumn=Right margin column
+preferences.RowAndCellBackgroundColours=Row and Cell Background Colours
+preferences.RowNumberHeader=Row number header
+preferences.RowSelection=Row selection
+preferences.SQLKeywords=SQL Keywords
+preferences.SQLStateCodes=SQL State Codes
+preferences.SampleBraceMatch=Sample brace match
+preferences.SampleBraceMatchError=Sample brace match error
+preferences.SampleBracesText=Sample braces text
+preferences.SampleCurrentLineHighlight=Sample current line highlight
+preferences.SampleKeywordText=Sample keyword text
+preferences.SampleLiteralText=Sample literal text
+preferences.SampleMulti-lineCommentText=Sample multi-line comment text
+preferences.SampleNormalText=Sample normal text
+preferences.SampleNumberText=Sample number text
+preferences.SampleObjectsDb=Sample objects db
+preferences.SampleOperatorText=Sample operator text
+preferences.SampleQuoteText=Sample quote text
+preferences.SampleSelectedText=Sample selected text
+preferences.SampleSingleLineCommentText=Sample single line comment text
+preferences.SampleText=Sample text
+preferences.SaveColumnWidthStateBetweenQueries=Save column width state between queries
+preferences.SearchToolBar=Search Tool Bar
+preferences.SearchTools=Search Tools
+preferences.Shortcut=Shortcut
+preferences.Shortcuts=Shortcuts
+preferences.ShowOnlyDefaultCatalogOrSchema=Show only default catalog or schema
+preferences.Single-lineComment=Single-line Comment
+preferences.StartupConnection=Startup connection
+preferences.StatusBar=Status bar
+preferences.SyntaxStyle=SyntaxStyle
+preferences.SyntaxStyles=SyntaxStyles
+preferences.SystemConsole=System console
+preferences.SystemPropertiesPalette=System properties palette
+preferences.SystemToolBar=System Tool Bar
+preferences.SystemTools=System Tools
+preferences.TabSize=Tab size
+preferences.TableDataPanel=Table Data Panel
+preferences.Text=Text
+preferences.TextSelectionAlternativeBackground=Text selection alternative background
+preferences.TextSelectionBackground=Text selection background
+preferences.TextSelectionForeground=Text selection foreground
+preferences.TimeZones=Time Zones
+preferences.ToolBar=Tool Bar
+preferences.ToolsPanel=Tools panel
+preferences.TransposeWhenSingleRowResult=Transpose when single row result
+preferences.TreeConnections=Tree Connections
+preferences.UndoCount=Undo count
+preferences.UseAnti-aliasFonts=Use anti-alias fonts
+preferences.UseFormForAddingDeletingRecords=Use form for adding/deleting records
+preferences.UseOtherColorForNullWhenAddingDeletingRecords=Use other color for null when adding/deleting records
+preferences.UseProxyServer=Use proxy server for internet connections
+preferences.Visibility=Visibility
+preferences.restart-message=The settings will take effect after the application is restarted.
 # -----------------------------------------------------
 # Classes
 # -----------------------------------------------------
