See #19651 fixed localisation

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -38,6 +38,7 @@ common.key=Key
 common.message.apply-changes=Do you wish to apply your changes?
 common.metadata=Meta Data
 common.mode=Mode
+common.move=Move
 common.name=Name
 common.newConnection.button=New Connection
 common.ok.button=OK
@@ -293,6 +294,7 @@ menu.window=Window
 # -----------------------------------------------------
 # Preferences
 # -----------------------------------------------------
+preferences.AddSeparator=Add Separator
 preferences.AlternatingRowBackground=Alternating row background
 preferences.Appearance=Appearance
 preferences.Auto-completeDatabaseObjectsOn=Auto-complete database objects on
@@ -406,6 +408,7 @@ preferences.QuoteString=Quote String
 preferences.RecentFilesToStore=Recent files to store
 preferences.RecycleResultSetTabs=Recycle result set tabs
 preferences.RemoveCommentsForExecution=Remove comments for execution
+preferences.RemoveSeparator=Remove Separator
 preferences.ResultSetTable=Result Set Table
 preferences.ResultsPanel=ResultsPanel
 preferences.ResultsPanelBackground=Results panel background
