--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -38,6 +38,7 @@ common.key=Ключ
 common.message.apply-changes=Вы хотите применить изменения?
 common.metadata=Метаданые
 common.mode=Режим
+common.move=Переместить
 common.name=Имя
 common.newConnection.button=Новое подключение
 common.ok.button=OK
@@ -293,6 +294,7 @@ menu.window=Окна
 # -----------------------------------------------------
 # Preferences
 # -----------------------------------------------------
+preferences.AddSeparator=Добавить разделитель
 preferences.AlternatingRowBackground=Альтернативный фон ячейки
 preferences.Appearance=Внешний вид
 preferences.Auto-completeDatabaseObjectsOn=Автозавершение объекктов БД
@@ -406,6 +408,7 @@ preferences.QuoteString=Строка в кавычках
 preferences.RecentFilesToStore=Количество отображаемых последних файлов 
 preferences.RecycleResultSetTabs=Открывать результирующие наборы данных в одной вкладке
 preferences.RemoveCommentsForExecution=Удалять комментарии перед выполнением
+preferences.RemoveSeparator=Удалить разделитель
 preferences.ResultSetTable=Таблица набора данных
 preferences.ResultsPanel=Панель результатов
 preferences.ResultsPanelBackground=Фон панели результатов
