See #34498 fixed frame connect to db in User Manager

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -978,6 +978,7 @@ TraceManagerPanel.VisibleColumns=Visible Columns
 UserManagerPanel.Add=Add
 UserManagerPanel.AddRole=Add role
 UserManagerPanel.AddUser=Add user
+UserManagerPanel.Connect=Connect to {0}
 UserManagerPanel.Delete=Delete
 UserManagerPanel.Edit=Edit
 UserManagerPanel.EditUser=Edit user
