--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -978,6 +978,7 @@ TraceManagerPanel.VisibleColumns=Видимые столбцы
 UserManagerPanel.Add=Добавить
 UserManagerPanel.AddRole=Добавить роль
 UserManagerPanel.AddUser=Добавить пользователя
+UserManagerPanel.Connect=Подключиться к {0}
 UserManagerPanel.Delete=Удалить
 UserManagerPanel.Edit=Редактировать
 UserManagerPanel.EditUser=Редактировать пользователя
