See #19651 added localisation in: -Execute Sql Script -User Manager -Creating table -Error in use

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -663,6 +663,7 @@ BrowserTreePopupMenuActionListener.exportDbunit=Export DBUnit
 BrowserTreePopupMenuActionListener.exportExcel=Export Excel Spreadsheet
 BrowserTreePopupMenuActionListener.exportXml=Export XML
 BrowserTreePopupMenuActionListener.importXml=Import XML
+BrowserTreePopupMenuActionListener.messageInUse=Object <{0}> is in use and cannot be deleted until it is closed.
 BrowserTreePopupMenuActionListener.temporaryInconvenience=This section is under construction. Sorry for the temporary inconvenience
 BrowserTreeRootPopupMenu.ConnectAll=Connect All
 BrowserTreeRootPopupMenu.DeleteFolder=Delete Folder
@@ -785,6 +786,23 @@ CreateIndexPanel.descending=DESCENDING
 CreateIndexPanel.fields=Fields
 CreateIndexPanel.sorting=Sorting
 CreateIndexPanel.unique=Unique
+CreateTableFunctionPanel.Columns=Columns
+CreateTableFunctionPanel.Connection=Connection:
+CreateTableFunctionPanel.Constraints=Constraints
+CreateTableFunctionPanel.TableName=Table Name:
+CreateTableFunctionPanel.TypeTemporaryTable=Type Temporary Table:
+CreateTableFunctionPanel.data-types=data  types
+CreateTableFunctionPanel.error.retrieving=Error retrieving the {0} list for the {1}.\n\nThe system returned:\n{2}
+CreateTableFunctionPanel.error.select-type=Select type for all columns
+CreateTableFunctionPanel.selected-connection=selected connection
+CreateTablePanel.Create=Create
+CreateTablePanel.column-names=column names
+CreateTablePanel.error.retrieving=Error retrieving the {0} list for the {1}.\n\nThe system returned:\n{2}
+CreateTablePanel.message.notConnected=No connections available!
+CreateTablePanel.selected-connection=selected connection
+CreateTablePanel.selected-table=selected table
+CreateTablePanel.tables=tables
+CreateTablePanel.title=Create Table
 CreateTriggerPanel.DDL-trigger=DDL trigger
 CreateTriggerPanel.before-after=Before/After
 CreateTriggerPanel.database-trigger=Database trigger
@@ -805,6 +823,18 @@ ExecuteQueryDialog.error=SQL Returned
 ExecuteQueryDialog.listActions=List Actions
 ExecuteQueryDialog.operator=SQL Statement
 ExecuteQueryDialog.rollback=Rollback
+ExecuteSqlScriptPanel.ActionOnError=Action on Error:
+ExecuteSqlScriptPanel.Browse=Browse
+ExecuteSqlScriptPanel.InputFile=Input File:
+ExecuteSqlScriptPanel.SaveScript=Save script
+ExecuteSqlScriptPanel.Select=Select
+ExecuteSqlScriptPanel.UseConnection=Use connection
+ExecuteSqlScriptPanel.error.file-not-exist=The selected file does not exists in the file system
+ExecuteSqlScriptPanel.error.load-file=Unable to load an input file
+ExecuteSqlScriptPanel.error.select-input-file=Please select an input file
+ExecuteSqlScriptPanel.logOutput=Print running statements (This can slow down the process significantly)
+ExecuteSqlScriptPanel.title=Execute SQL Script
+ExecuteSqlScriptPanel.title.file-chooser=Select SQL Script
 ExportAsSQLPanelOne.exportTip=Single table export retrieves requested data from one \ntable only. This will also allow for the selection of individual \ncolumns from that table.\n\nSelecting a multiple table export \ndoes not allow for individual column selection and all \ncolumns within selected tables are exported. A multiple table \nexport also allows for a single file for all tables within separate.
 ExportDBUnitCommand.title=Export DBUnit Dataset
 ExportDelimitedCommand.title=Export Data
@@ -991,9 +1021,11 @@ UserManagerPanel.Password=Password
 UserManagerPanel.Refresh=Refresh
 UserManagerPanel.Role=Role
 UserManagerPanel.RoleName=Role name
+UserManagerPanel.RoleRole=Role->Role
 UserManagerPanel.Roles=Roles
 UserManagerPanel.UserManager=User Manager
 UserManagerPanel.UserName=User name
+UserManagerPanel.UserRole=User->Role
 UserManagerPanel.Users=Users
 UserManagerPanel.cancelButton=Cancel filling
 UserManagerPanel.connectButton=Connect
@@ -1022,6 +1054,8 @@ WindowAddUser.addTag=Add Tag
 WindowAddUser.deleteTag=Delete Tag
 WindowAddUser.error.empty-name=Username can not be empty
 WindowAddUser.error.empty-pwd=Password can not be empty
+WindowAddUser.error.failed-add-user=Failed to add user {0}
+WindowAddUser.error.failed-edit-user=Failed to edit user {0}
 WindowAddUser.error.pwds-not-match=Passwords do not match
 WindowAddUser.tag=Tag
 WindowAddUser.value=Value
