added checkBox names to upper case
(cherry picked from commit 814dcd903713021a46580eda4d460593065d989b)

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -735,6 +735,7 @@ ConnectionPanel.message.level-change1=The transaction isolation level
 ConnectionPanel.message.level-change2=was applied successfully.
 ConnectionPanel.nameField.tool-tip=A friendly name for this connection
 ConnectionPanel.nameField=Connection Name:
+ConnectionPanel.namesToUpperCase=Object Names To Upper Case
 ConnectionPanel.passwordField.tool-tip=Login password
 ConnectionPanel.passwordField=Password:
 ConnectionPanel.portField.tool-tip=Database port number
