--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -735,6 +735,7 @@ ConnectionPanel.message.level-change1=Уровень изоляции транз
 ConnectionPanel.message.level-change2=\ - успешно применен
 ConnectionPanel.nameField.tool-tip=Краткое имя подключения
 ConnectionPanel.nameField=Имя подключения:
+ConnectionPanel.namesToUpperCase=Приводить имена объектов к верхнему регистру
 ConnectionPanel.passwordField.tool-tip=Введите пароль
 ConnectionPanel.passwordField=Пароль:
 ConnectionPanel.portField.tool-tip=Номер порта базы данных
