Updated documentation for release 1.0.4 version. Screenshots are updated, installation is described, section 3 (Overview of the graphical interface) is expanded (see #34539); editing in the settings section.

--- a/guide/general_defs.tex
+++ b/guide/general_defs.tex
@@ -9,7 +9,7 @@
 \usepackage{longtable}
 \usepackage{hhline}
 \usepackage[pdftex]{graphicx}
-\usepackage[colorlinks=true,linkcolor=blue]{hyperref}
+\usepackage[colorlinks=true,linkcolor=blue,unicode, pdftex]{hyperref}
 \makeatletter
 \newcommand\arraybslash{\let\\\@arraycr}
 \makeatother
@@ -264,7 +264,7 @@
 
 \begin{flushright}
 \Huge {\xhrulefill{red}{2mm}\color{red} Red Expert} \\
-\LARGE Версия 1.0\\
+\LARGE Версия 1.0.4\\
 #1
 \end{flushright}
 
