See #37422 added option hiding system objects

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -443,6 +443,7 @@ preferences.SearchTools=Search Tools
 preferences.Shortcut=Shortcut
 preferences.Shortcuts=Shortcuts
 preferences.ShowOnlyDefaultCatalogOrSchema=Show only default catalog or schema
+preferences.ShowSystemObjects=Show System Objects
 preferences.Single-lineComment=Single-line Comment
 preferences.StartupConnection=Startup connection
 preferences.StatusBar=Status bar
