--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -443,6 +443,7 @@ preferences.SearchTools=Инструменты поиска
 preferences.Shortcut=Горячие клавиши
 preferences.Shortcuts=Горячие клавиши
 preferences.ShowOnlyDefaultCatalogOrSchema=Показать только каталог или схему по умолчанию
+preferences.ShowSystemObjects=Показать системные объекты
 preferences.Single-lineComment=Одиночный комментарий
 preferences.StartupConnection=Подключение для автозапуска
 preferences.StatusBar=Строка состояния
