See #37420. Print SQL text of View as is
Also added a button to format SQL text.

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -4,6 +4,7 @@
 # common labels
 common.ComputedSource=Вычисляется как
 common.SQL=SQL
+common.FormatSQL=Форматировать SQL
 common.add.button=Добавить
 common.apply.button=Применить
 common.cancel.button=Отмена
