--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -4,6 +4,7 @@
 # common labels
 common.ComputedSource=Computed Source
 common.SQL=SQL
+common.FormatSQL=Format SQL
 common.add.button=Add
 common.apply.button=Apply
 common.cancel.button=Cancel
@@ -736,7 +737,7 @@ ConnectionPanel.message.level-change1=The transaction isolation level
 ConnectionPanel.message.level-change2=was applied successfully.
 ConnectionPanel.nameField.tool-tip=A friendly name for this connection
 ConnectionPanel.nameField=Connection Name:
-ConnectionPanel.namesToUpperCase=Object Names To Upper Case
+ConnectionPanel.namesToUpperCase=Object names to upper case
 ConnectionPanel.passwordField.tool-tip=Login password
 ConnectionPanel.passwordField=Password:
 ConnectionPanel.portField.tool-tip=Database port number
