added ability search in columns

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -439,6 +439,7 @@ preferences.SampleSelectedText=Sample selected text
 preferences.SampleSingleLineCommentText=Sample single line comment text
 preferences.SampleText=Sample text
 preferences.SaveColumnWidthStateBetweenQueries=Save column width state between queries
+preferences.SearchInColumns=Search In Columns (this will significantly slow down the process)
 preferences.SearchToolBar=Search Tool Bar
 preferences.SearchTools=Search Tools
 preferences.Shortcut=Shortcut
