See #19651 translated CreateDatabasePanel

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -705,11 +705,14 @@ ConnectionPanel.CharacterSet=Character Set:
 ConnectionPanel.ChooseFile=Choose file
 ConnectionPanel.ConnectionParameters.tool-tip=Specify connection parameters or JDBC string
 ConnectionPanel.ConnectionParameters=Connection parameters:
+ConnectionPanel.Create=Create
+ConnectionPanel.CreateDatabase=Create Database
 ConnectionPanel.DatabaseDefault=Database Default
 ConnectionPanel.EncryptPassword.tool-tip=Encrypt the password when saving
 ConnectionPanel.EncryptPassword=Encrypt Password
 ConnectionPanel.IsolationLevel=Isolation Level:
 ConnectionPanel.JDBCProperties=JDBC Properties
+ConnectionPanel.PageSize=Page Size:
 ConnectionPanel.Role=Role:
 ConnectionPanel.SSHTunnel=SSH Tunnel
 ConnectionPanel.ShowPassword.tool-tip=Show the password in plain text
