--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -298,7 +298,7 @@ menu.window=Окна
 preferences.AddSeparator=Добавить разделитель
 preferences.AlternatingRowBackground=Альтернативный фон ячейки
 preferences.Appearance=Внешний вид
-preferences.Auto-completeDatabaseObjectsOn=Автозавершение объекктов БД
+preferences.Auto-completeDatabaseObjectsOn=Автозавершение объектов БД
 preferences.Auto-completeKeywordsOn=Автозавершение ключевых слов
 preferences.BinaryValueCellBackground=Фон ячейки с бинарным значением
 preferences.BooleanValueCellBackground=Фон ячейки с логическим значением
@@ -705,11 +705,14 @@ ConnectionPanel.CharacterSet=Кодировка:
 ConnectionPanel.ChooseFile=Выбрать файл
 ConnectionPanel.ConnectionParameters.tool-tip=Строка подключения в формате JDBC
 ConnectionPanel.ConnectionParameters=Параметры подключения
+ConnectionPanel.Create=Создать
+ConnectionPanel.CreateDatabase=Создать базу данных
 ConnectionPanel.DatabaseDefault=Стандартная база данных
 ConnectionPanel.EncryptPassword.tool-tip=Зашифровать пароль при сохранении
 ConnectionPanel.EncryptPassword=Зашифровать пароль
 ConnectionPanel.IsolationLevel=Уровень изоляции:
 ConnectionPanel.JDBCProperties=Свойства JDBC
+ConnectionPanel.PageSize=Размер страницы:
 ConnectionPanel.Role=Роль:
 ConnectionPanel.SSHTunnel=SSH Тоннель
 ConnectionPanel.ShowPassword.tool-tip=Показать пароль в текстовом виде
