See #37683. Separate display of fetched number and total records number
Getting total number of rows in table is carried out both in automatic mode (disabled by default) and manually by button as in IBExpert.
Adding buttons to get count of rows eliminates need to reopen tab to get current number of data that can dynamically change while working with table.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -60,6 +60,8 @@ common.subtype=Subtype
 common.table=Table
 common.test.button=Test
 common.value=Value
+common.fetched=Count fetched
+common.get-rows-count=Get rows count
 # -------------------------------------------------------------
 # actions
 # -------------------------------------------------------------
@@ -613,7 +615,7 @@ BrowserTableEditingPanel.db-table=Database Table
 BrowserTableEditingPanel.description-table=Table: 
 BrowserTableEditingPanel.indexes-table=Indexes for table: 
 BrowserTableEditingPanel.metadata-table=Table Meta Data: 
-BrowserTableEditingPanel.option-disabled=Option Disabled
+BrowserTableEditingPanel.option-disabled=Automatic counting of records is disabled
 BrowserTableEditingPanel.privileges-table=Access rights for table: 
 BrowserTableEditingPanel.quering=Querying...
 BrowserTableEditingPanel.row-count=Data Row Count:
