--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -60,6 +60,8 @@ common.subtype=Подтип
 common.table=Таблица
 common.test.button=Тест
 common.value=Значение
+common.fetched=Число извлеченных
+common.get-rows-count=Получить кол-во записей
 # -------------------------------------------------------------
 # actions
 # -------------------------------------------------------------
@@ -613,7 +615,7 @@ BrowserTableEditingPanel.db-table=Таблица базы данных
 BrowserTableEditingPanel.description-table=Таблица: 
 BrowserTableEditingPanel.indexes-table=Индексы таблицы: 
 BrowserTableEditingPanel.metadata-table=Метаданные таблицы: 
-BrowserTableEditingPanel.option-disabled=Опция отключена
+BrowserTableEditingPanel.option-disabled=Автоматический подсчет записей отключен
 BrowserTableEditingPanel.privileges-table=Права доступа к таблице: 
 BrowserTableEditingPanel.quering=Выполнение запроса
 BrowserTableEditingPanel.row-count=Количество строк с данными:
