See #37683. Option for automatic query for data rows count

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -407,6 +407,7 @@ preferences.ProxyPassword=Proxy Password
 preferences.ProxyPort=Proxy Port
 preferences.ProxyUser=Proxy User
 preferences.QueryEditorColours=Query Editor Colours
+preferences.QueryForRowsCount=Query for the data row count
 preferences.QuoteString=Quote String
 preferences.RecentFilesToStore=Recent files to store
 preferences.RecycleResultSetTabs=Recycle result set tabs
