--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -407,6 +407,7 @@ preferences.ProxyPassword=Прокси пароль
 preferences.ProxyPort=Прокси порт
 preferences.ProxyUser=Прокси пользователь
 preferences.QueryEditorColours=Цвета редактора запросов
+preferences.QueryForRowsCount=Запрос количества строк при открытии таблицы
 preferences.QuoteString=Строка в кавычках
 preferences.RecentFilesToStore=Количество отображаемых последних файлов 
 preferences.RecycleResultSetTabs=Открывать результирующие наборы данных в одной вкладке
