--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -62,6 +62,7 @@ common.test.button=Test
 common.value=Value
 common.fetched=Count fetched
 common.get-rows-count=Get rows count
+common.confirmation-request=Exit without saving changes?
 # -------------------------------------------------------------
 # actions
 # -------------------------------------------------------------
