--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -62,6 +62,7 @@ common.test.button=Тест
 common.value=Значение
 common.fetched=Число извлеченных
 common.get-rows-count=Получить кол-во записей
+common.confirmation-request=Выйти без сохранения?
 # -------------------------------------------------------------
 # actions
 # -------------------------------------------------------------
