See #42817 added ability change font of output console
(cherry picked from commit 88dbd4a8b4877e302a848753ee86bb2a37d27632)

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -398,6 +398,7 @@ preferences.ObjectsDB=Objects DB
 preferences.OpenANewEditorForNewOpenConnection=Open a new editor for new open connection
 preferences.Operator=Operator
 preferences.OtherValueCellBackground=Other value cell background
+preferences.OutputConsole=Output Console
 preferences.OutputLogFilePath=Output log file path
 preferences.OutputLogLevel=Output log level
 preferences.Preferences=Preferences
@@ -455,7 +456,7 @@ preferences.StartupConnection=Startup connection
 preferences.StatusBar=Status bar
 preferences.SyntaxStyle=SyntaxStyle
 preferences.SyntaxStyles=SyntaxStyles
-preferences.SystemConsole=System console
+preferences.SystemConsole=Display system console
 preferences.SystemPropertiesPalette=System properties palette
 preferences.SystemToolBar=System Tool Bar
 preferences.SystemTools=System Tools
