--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -398,6 +398,7 @@ preferences.ObjectsDB=Объекты БД
 preferences.OpenANewEditorForNewOpenConnection=Открывать новый редактор для нового открытого подключения
 preferences.Operator=Оператор
 preferences.OtherValueCellBackground=Фон ячейки с прочим значением
+preferences.OutputConsole=Консоль
 preferences.OutputLogFilePath=Путь к файлу с логом
 preferences.OutputLogLevel=Уровень лога событий
 preferences.Preferences=Настройки
@@ -455,7 +456,7 @@ preferences.StartupConnection=Подключение для автозапуск
 preferences.StatusBar=Строка состояния
 preferences.SyntaxStyle=Синтаксический стиль
 preferences.SyntaxStyles=Синтаксические стили
-preferences.SystemConsole=Системная консоль
+preferences.SystemConsole=Отображать cистемную консоль
 preferences.SystemPropertiesPalette=Палитра свойств системы
 preferences.SystemToolBar=Панель системных инструментов 
 preferences.SystemTools=Системные настройки
