--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -698,6 +698,9 @@ CatalogPanel.AvailableSchemas=Доступные схемы
 CatalogPanel.DatabaseCatalog=Каталог базы данных
 CatalogPanel.SchemaName=Имя схемы
 CatalogPanel.catalogName=Имя каталога
+CheckForUpdateNotifier.noUpdateMessage=Обновление недоступно. \nДанная версия Red Expert актуальна. \nПериодически проверяйте обновления, чтобы убедиться, что у вас установлена последняя версия.
+CheckForUpdateNotifier.checkingUpdatesMessage=Проверка обновленной версии
+CheckForUpdateNotifier.checkingUpdatesTitle=Проверка обновлений
 ColumnIndexTableModel.IndexName=Имя индекса
 ColumnIndexTableModel.IndexedColumn=Индексируемый столбец
 ColumnIndexTableModel.Non-Unique=Неуникальность
@@ -857,6 +860,16 @@ FeedbackCommand.errorExecutingFeedbackCommand=Ошибка выполнения 
 FeedbackCommand.featureRequest=Запрос функции(фичи)
 FeedbackCommand.reportBug=Отчет об ошибке
 FeedbackCommand.userComments=Комментарии пользователя
+FeedbackPanel.bugReport=Пожалуйста, предоставьте как можно больше информации о том, что вы делали, когда произошла ошибка, а также о том, к какой базе данных вы подключены, и обо всех возможных трассировках стека исключений.
+FeedbackPanel.completeFields=Пожалуйста, заполните поля ниже.
+FeedbackPanel.infoAttachments=Если вы хотите отправить отзыв с приложениями, отправьте электронное письмо по адресу rdb.support@red-soft.ru вместо заполнения этой формы.
+FeedbackPanel.messageSuccess=Ваши замечания были успешно отправлены на rdb.support@red-soft.ru. \nСпасибо за отзыв.
+FeedbackPanel.noEmailErrorMessage=Пожалуйста, введите свой адрес электронной почты в текстовом поле.
+FeedbackPanel.noNameErrorMessage=Пожалуйста, введите ваше имя или псевдоним в текстовом поле.
+FeedbackPanel.noRemarksErrorMessage=Пожалуйста, введите свои замечания в предоставленном текстовом поле.
+FeedbackPanel.postingFeedback=Отправка отзыва
+FeedbackPanel.postingFeedbackMessage=Отправка отзыва по адресу rdb.support@red-soft.ru
+FeedbackPanel.warningInternetConnection=Эта функция требует активного подключения к Интернету.
 GotoCommand.goTo=Перейти к
 GotoCommand.lineNumber=Номер строки:
 GrantManagerPanel.AllObjects=Все объекты
