--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -698,6 +698,9 @@ CatalogPanel.AvailableSchemas=Available Schemas
 CatalogPanel.DatabaseCatalog=Database Catalog
 CatalogPanel.SchemaName=Schema Name
 CatalogPanel.catalogName=Catalog Name:
+CheckForUpdateNotifier.noUpdateMessage=No update available.\nThis version of Red Expert is up to date.\nPlease check back here periodically to ensure you have the latest version.
+CheckForUpdateNotifier.checkingUpdatesMessage=Checking for updated version
+CheckForUpdateNotifier.checkingUpdatesTitle=Check for update
 ColumnIndexTableModel.IndexName=Index Name
 ColumnIndexTableModel.IndexedColumn=Indexed Column
 ColumnIndexTableModel.Non-Unique=Non-Unique
@@ -857,6 +860,16 @@ FeedbackCommand.errorExecutingFeedbackCommand=Error executing feedback command:
 FeedbackCommand.featureRequest=Feature Request
 FeedbackCommand.reportBug=Report Bug
 FeedbackCommand.userComments=User Comments
+FeedbackPanel.bugReport=Please provide as much information on what you were doing when the error occurred as well as what database you are connected to and any exception stack traces that may be available.
+FeedbackPanel.completeFields=Please complete the fields below.
+FeedbackPanel.infoAttachments=If you wish to send feedback with attachments, please send an email to rdb.support@red-soft.ru instead of completing this form.
+FeedbackPanel.messageSuccess=Your remarks were successfully posted to rdb.support@red-soft.ru.\nThank you for your feedback.
+FeedbackPanel.noEmailErrorMessage=Please enter your e-mail in the text field provided.
+FeedbackPanel.noNameErrorMessage=Please enter your name or nickname in the text field provided.
+FeedbackPanel.noRemarksErrorMessage=Please enter your remarks in the text area provided.
+FeedbackPanel.postingFeedback=Posting Feedback
+FeedbackPanel.postingFeedbackMessage=Posting feedback report to rdb.support@red-soft.ru
+FeedbackPanel.warningInternetConnection=This feature requires an active internet connection.
 GotoCommand.goTo=Go To
 GotoCommand.lineNumber=Line Number:
 GrantManagerPanel.AllObjects=All Objects
